--- a/client/pom.xml
+++ b/client/pom.xml
@@ -18,22 +18,25 @@
         <groupId>com.github.eirslett</groupId>
         <artifactId>frontend-maven-plugin</artifactId>
         <version>1.9.1</version>
-        <configuration>
-          <nodeVersion>v12.14.1</nodeVersion>
-          <workingDirectory>./</workingDirectory>
-        </configuration>
         <executions>
           <execution>
             <id>install node and npm</id>
-              <goals>
-                <goal>install-node-and-npm</goal>
-              </goals>
+            <goals>
+              <goal>install-node-and-npm</goal>
+            </goals>
+            <configuration>
+              <nodeVersion>v12.14.1</nodeVersion>
+              <workingDirectory>./</workingDirectory>
+            </configuration>
           </execution>
           <execution>
             <id>npm install</id>
             <goals>
               <goal>npm</goal>
             </goals>
+            <configuration>
+              <arguments>install</arguments>
+            </configuration>
           </execution>
           <execution>
             <id>npm run build</id>
